--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       --card-border: rgba(255,255,255,.14);
       --ghost-border: rgba(255,255,255,.22);
       --ball-text: #111;
+      --input-bg: rgba(0,0,0,.2);
+      --input-border: rgba(255,255,255,.2);
     }
 
     body.light-mode {
@@ -21,13 +23,19 @@
       --text: #333;
       --card-bg: rgba(255,255,255,.6);
       --card-border: rgba(0,0,0,.1);
+      --input-bg: rgba(255,255,255,.8);
+      --input-border: rgba(0,0,0,.1);
     }
     
     body{
       font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans KR", sans-serif;
       margin:0; padding:24px;
       min-height:100vh;
-      display:grid; place-items:center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
       background: var(--bg);
       color: var(--text);
     }
@@ -57,6 +65,7 @@
       background: var(--card-bg);
       box-shadow: 0 14px 38px rgba(0,0,0,.22);
       backdrop-filter: blur(8px);
+      box-sizing: border-box;
     }
 
     h1{ margin:0 0 8px; font-size:22px; letter-spacing:-.2px; }
@@ -84,7 +93,7 @@
       font-weight:800;
       font-size:15px;
       letter-spacing:-.2px;
-      transition: transform .06s ease, filter .2s ease;
+      transition: transform .06s ease, filter .2s ease, background .2s ease, color .2s ease;
       box-shadow: 0 10px 22px rgba(0,0,0,.18);
     }
     button:active{ transform: translateY(1px); }
@@ -146,6 +155,33 @@
     }
 
     input[type="checkbox"]{ transform: scale(1.12); }
+    
+    .subscribe-container {
+      text-align: center;
+    }
+    .subscribe-container h2 {
+      font-size: 18px;
+      margin-bottom: 12px;
+      opacity: 0.9;
+    }
+    .subscribe-form {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+    }
+    .subscribe-form input[type="email"] {
+      padding: 12px;
+      border-radius: 12px;
+      border: 1px solid var(--input-border);
+      background-color: var(--input-bg);
+      color: var(--text);
+      min-width: 250px;
+      font-size: 15px;
+    }
+    .subscribe-form button {
+      background-color: #3b82f6;
+      color: #fff;
+    }
   </style>
 </head>
 
@@ -176,6 +212,15 @@
 
     <div class="meta" id="meta"></div>
   </main>
+  
+  <div class="subscribe-container">
+      <h2>매일 로또 번호를 받아보세요!</h2>
+      <form action="https://formspree.io/f/xkobjbrd" method="POST" class="subscribe-form">
+        <input type="hidden" name="subject" value="매일 로또 번호 구독">
+        <input type="email" name="email" placeholder="이메일 주소를 입력하세요" required>
+        <button type="submit">구독하기</button>
+      </form>
+  </div>
 
   <script>
     const $ = (sel) => document.querySelector(sel);
