Add animal-face test page

--- a/index.html
+++ b/index.html
@@ -182,6 +182,18 @@
       background-color: #3b82f6;
       color: #fff;
     }
+    .link-button {
+      display: inline-block;
+      margin-top: 12px;
+      padding: 10px 14px;
+      border-radius: 12px;
+      background: transparent;
+      color: inherit;
+      border: 1px solid var(--ghost-border);
+      text-decoration: none;
+      font-weight: 700;
+      box-shadow: 0 10px 22px rgba(0,0,0,.12);
+    }
 
     .comments-card h2 {
       margin: 0 0 10px;
@@ -234,6 +246,7 @@
         <input type="email" name="email" placeholder="이메일 주소를 입력하세요" required>
         <button type="submit">구독하기</button>
       </form>
+      <a class="link-button" href="animal-face.html">🐶🐱 동물상 테스트 하러가기</a>
   </div>
 
   <section class="card comments-card" aria-label="댓글">
