feat: 애드센스 승인을 위한 사이트 최적화

--- a/animal-face.html
+++ b/animal-face.html
@@ -235,6 +235,14 @@
         <p class="tip">최종 결과는 예측 확률이 높은 쪽을 기준으로 표시됩니다. 조명과 각도에 따라 달라질 수 있어요.</p>
       </div>
     </section>
+
+    <footer style="text-align: center; margin-top: 20px; font-size: 14px; opacity: 0.8;">
+      <a href="index.html" style="color: inherit; margin: 0 10px;">로또 번호 생성기</a>
+      <a href="about.html" style="color: inherit; margin: 0 10px;">소개</a>
+      <a href="contact.html" style="color: inherit; margin: 0 10px;">문의하기</a>
+      <a href="privacy.html" style="color: inherit; margin: 0 10px;">개인정보처리방침</a>
+      <p style="margin-top: 10px;">© 2026 로또번호 추첨기. 모든 권리 보유.</p>
+    </footer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.16.0/dist/tf.min.js"></script>
