--- a/index.html
+++ b/index.html
@@ -220,7 +220,15 @@
 
   <main class="card">
     <h1>🎲 로또번호 추첨기</h1>
-    <p>버튼을 누르면 <b>1~45</b> 사이에서 <b>중복 없이 6개</b> 번호를 뽑아 <b>오름차순</b>으로 보여줍니다.</p>
+    <p>
+      매주 어떤 번호를 선택할지 고민되시나요? '로또번호 추첨기'가 그 고민을 덜어드립니다.
+      버튼 클릭 한 번으로 공정하고 무작위적인 알고리즘을 통해 행운의 번호 6개를 추천받을 수 있습니다.
+      보너스 번호가 필요하시면 옵션을 선택하여 함께 추첨할 수도 있습니다.
+    </p>
+    <p>
+      본 추첨기는 통계적 편향 없이 1부터 45까지의 모든 번호가 동일한 확률로 선택되도록 설계되었습니다.
+      생성된 번호를 참고하여 여러분만의 행운의 조합을 만들어보세요.
+    </p>
 
     <div class="row">
       <div class="left">
@@ -256,6 +264,13 @@
     <p>의견을 남겨 주세요. Disqus 계정으로 로그인할 수 있어요.</p>
     <div id="disqus_thread"></div>
   </section>
+
+  <footer style="text-align: center; margin-top: 20px; font-size: 14px; opacity: 0.8;">
+    <a href="about.html" style="color: inherit; margin: 0 10px;">소개</a>
+    <a href="contact.html" style="color: inherit; margin: 0 10px;">문의하기</a>
+    <a href="privacy.html" style="color: inherit; margin: 0 10px;">개인정보처리방침</a>
+    <p style="margin-top: 10px;">© 2026 로또번호 추첨기. 모든 권리 보유.</p>
+  </footer>
 
   <script>
     /**
