Add Google tag to pages

--- a/animal-face.html
+++ b/animal-face.html
@@ -203,6 +203,15 @@
       h1 { font-size: 24px; }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-41WW1TN2V0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-41WW1TN2V0');
+  </script>
 </head>
 <body>
   <div class="wrap">
