--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
     gtag('config', 'G-41WW1TN2V0');
   </script>
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "va45gzot95");
+  </script>
 </head>
 
 <body>
