--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>로또번호 추첨기</title>
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6010797332920736"
      crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
